[tool.poetry]
name = "learning-dbt"
version = "0.1.0"
description = ""
authors = ["Felipe Whitaker <felipewhitaker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt = "^0.20.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
